Project

General

Profile

Actions

Bug #19834

closed

multisite: RGWPeriodPusher CRThread startup races with RGWHTTPManager::set_threaded()

Added by Casey Bodley almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-05-02 19:17:59.214868 7164e700  4 rgw period pusher: Zone master pushing period d4d00723-baac-41ed-9ec0-56a89d4daee4 epoch 2 to 1 other zones
2017-05-02 19:17:59.221941 73250700 20 cr:s=0x72242f90:op=0x72242170:9PushAllCR: operate()
2017-05-02 19:17:59.222546 73250700  4 rgw period pusher: sending 1 periods
2017-05-02 19:17:59.226633 73250700 20 cr:s=0x72243eb0:op=0x72243520:14PushAndRetryCR: operate()
2017-05-02 19:17:59.227000 73250700 10 rgw period pusher: pushing period d4d00723-baac-41ed-9ec0-56a89d4daee4 to 9ee88016-26dc-4a51-815a-5c968b8ba6c0
2017-05-02 19:17:59.231687 73250700 20 cr:s=0x72242f90:op=0x72242170:9PushAllCR: operate()
2017-05-02 19:17:59.232769 73250700 20 run: stack=0x72242f90 is_blocked_by_stack()=0 is_sleeping=0 waiting_for_child()=1
2017-05-02 19:17:59.233633 73250700 20 cr:s=0x72243eb0:op=0x72244510:21RGWPostRESTResourceCRI9RGWPeriodiE: operate()
2017-05-02 19:17:59.234055 73250700 20 cr:s=0x72243eb0:op=0x72244510:21RGWPostRESTResourceCRI9RGWPeriodiE: operate()
2017-05-02 19:17:59.250295 73250700 20 > HTTP_DATE -> Tue May  2 19:17:59 2017
2017-05-02 19:17:59.252206 73250700 10 get_canon_resource(): dest=/admin/realm/period
2017-05-02 19:17:59.252484 73250700 10 generated canonical header: POST

Tue May  2 19:17:59 2017
/admin/realm/period
2017-05-02 19:17:59.254052 73250700 15 generated auth header: AWS TLUJYKBKNSI2OVZF:RnLSWdhlEWJVNV6/RsKutsnLLRA=
2017-05-02 19:17:59.259364 73250700 20 sending request to http://smithi138.front.sepia.ceph.com:7280/admin/realm/period?period=d4d00723-baac-41ed-9ec0-56a89d4daee4&epoch=2&rgwx-zonegroup=test-zonegroup
2017-05-02 19:17:59.268189 73250700 20 register_request mgr=0x72227860 req_data->id=0, easy_handle=0x7326bc50
2017-05-02 19:17:59.269217 73250700 20 link_request req_data=0x7326b9b0 req_data->id=0, easy_handle=0x7326bc50
2017-05-02 19:17:59.274432 73250700 20 run: stack=0x72243eb0 is io blocked
2017-05-02 19:17:59.277603 73e51700 20 reqs_thread_entry: start

...

2017-05-02 19:18:00.280682 73e51700 20 link_request req_data=0x7326b9b0 req_data->id=0, easy_handle=0x7326bc50
2017-05-02 19:18:00.281355 73e51700  0 ERROR: failed on curl_multi_add_handle, status=2
2017-05-02 19:18:00.281932 73e51700  0 ERROR: failed to link http request

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20020: jewel: multisite: RGWPeriodPusher CRThread startup races with RGWHTTPManager::set_threaded()ResolvedNathan CutlerActions
Copied to rgw - Backport #20021: kraken: multisite: RGWPeriodPusher CRThread startup races with RGWHTTPManager::set_threaded()RejectedActions
Actions #1

Updated by Yehuda Sadeh almost 7 years ago

  • Status changed from In Progress to Pending Backport
Actions #2

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20020: jewel: multisite: RGWPeriodPusher CRThread startup races with RGWHTTPManager::set_threaded() added
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20021: kraken: multisite: RGWPeriodPusher CRThread startup races with RGWHTTPManager::set_threaded() added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF