rgw: RGWPeriodPusher spawns http thread before cr thread

Fixes: http://tracker.ceph.com/issues/19834

Signed-off-by: Casey Bodley <cbodley@redhat.com>